--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -149,13 +149,26 @@
   .text-gradient {
     @apply bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500;
   }
-  .animate-blob {
-    animation: blob 7s infinite;
+  .animate-blob-1 {
+    animation: blob-1 20s infinite alternate linear;
   }
-  @keyframes blob {
+  .animate-blob-2 {
+    animation: blob-2 24s infinite alternate linear;
+  }
+  .animate-blob-3 {
+    animation: blob-3 16s infinite alternate;
+  }
+  @keyframes blob-1 {
     0% { transform: translate(0px, 0px) scale(1); }
-    33% { transform: translate(30px, -50px) scale(1.1); }
-    66% { transform: translate(-20px, 20px) scale(0.9); }
-    100% { transform: translate(0px, 0px) scale(1); }
+    100% { transform: translate(100px, 60px) scale(1.1); }
+  }
+  @keyframes blob-2 {
+    0% { transform: translate(0px, 0px) scale(1); }
+    100% { transform: translate(-100px, 100px) scale(1.2); }
+  }
+  @keyframes blob-3 {
+    0% { transform: translate(0px, 0px); opacity: 0.5; }
+    50% { transform: translate(60px, -60px); opacity: 0.8; }
+    100% { transform: translate(0px, 0px); opacity: 0.5; }
   }
 }
